<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A1014"
    tools:context=".Register2Activity">


    <!-- Ana gradient arka plan -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_gradient" />

    <!-- Radial gradient view - sağ üstte sabit boyutta -->
    <View
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="-200dp"
        android:background="@drawable/radial_gradient" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperMenuConst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/app_name"
            android:layout_marginStart="20dp"
            android:textColor="#E729C4"
            />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/signin"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/btnPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/help"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <TextView
        android:id="@+id/txtExplain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_friend"
        android:textColor="#fff"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/upperMenuConst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtExplain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_explain"
        android:textColor="#fff"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtExplain1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtExplain3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_explain1"
        android:textColor="#fff"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtExplain2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_register_bg"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/txtExplain3"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/epost"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edtPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_register_bg"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        android:layout_marginEnd="20dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password1"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/edtInvitationReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_register_bg"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordReg"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#fff"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="#fff"
        android:layout_marginTop="10dp"
        android:hint="@string/invitation_code"
        android:paddingLeft="20dp"/>

    <RelativeLayout
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/edtInvitationReg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:elevation="12dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_button_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/lets_go"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:layout_centerInParent="true"/>


    </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>