<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadyActivity"
    android:background="@drawable/ready_bg">

    <TextView
        android:id="@+id/txtReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/ready1"
        android:textColor="#fff"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/txtReady1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtReady"
        android:layout_marginBottom="100dp"
        android:text="@string/ready2"
        android:textColor="#fff"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/txtReady2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtReady1"
        android:layout_marginBottom="100dp"
        android:text="@string/ready3"
        android:textColor="#fff"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"/>

    <RelativeLayout
        android:id="@+id/btnContinueApp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/letsgo_button_bg"
        app:layout_constraintTop_toBottomOf="@id/txtReady2"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue2"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semibold"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>