<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>
        
        <EditText
            android:id="@+id/edtMail"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_edt_box_bg"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/epost"
            android:textColor="#fff"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#CCCCCC"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLogin"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_edt_box_bg"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="#fff"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#CCCCCC"
            android:autofillHints="password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtMail"/>

        <TextView
            android:id="@+id/txtLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:text="@string/forget_password"
            android:padding="8dp"/>

        <RelativeLayout
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_button_bg"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLoginText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/login"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="18sp"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:fontFamily="@font/poppins_extrabold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textColor="#E729C4"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"/>

</androidx.constraintlayout.widget.ConstraintLayout>